<resources>
    <string name="app_name">MyMusic</string>
    <string name="my">我的</string>
    <string name="recommend">推荐</string>
    <string name="search">搜索</string>
    <string name="recommendforyou">为你推荐</string>
    <string name="more">more</string>
    <string name="local">本地音乐</string>
    <string name="history">播放记录</string>
    <string name="download">下载管理</string>
    <string name="love">我的收藏</string>
    <string name="cancle">取消</string>
    <string name="search_hint">请输入歌曲名称或歌手或专辑</string>
    <string name="history_search">历史记录</string>
    <string name="no_content">没有更多数据了</string>
    <string name="dowload_title">下载管理</string>
    <string name="is_download">正在下载</string>
    <string name="has_download">已完成</string>
    <string name="search_result">搜索结果</string>
    <string name="search_history">搜索历史</string>
    <string name="add_to_love">已添加到收藏列表</string>
    <string name="add_to_download">已添加到下载列表</string>
    <string name="toast_has_down">该文件已下载</string>
</resources>
