<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_wight_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.9"
            android:background="@color/color_background"
            android:hint="@string/search_hint" />

        <TextView
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/color_text"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_backgroud_black"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/color_backgroud_black"
            android:text="@string/history_search"
            android:textColor="@color/color_text"
            android:textSize="16sp" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true"
        />
    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    </ListView>

</LinearLayout>