<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/header"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/header"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_wight_background">

            <Button
                android:id="@+id/menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/menu" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/my"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/my"
                    android:textColor="@color/color_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my"
                    android:background="@android:color/transparent"
                    android:text="@string/recommend"
                    android:textColor="@color/color_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/recommend"
                    android:background="@android:color/transparent"
                    android:text="@string/search"
                    android:textColor="@color/color_text"
                    android:textSize="18sp" />
            </RelativeLayout>
        </FrameLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>